Fix text alignment for grimm-atu-cell

--- a/assets/css/at-index.scss
+++ b/assets/css/at-index.scss
@@ -107,4 +107,4 @@
 .grimm-khm-cell     { width: 10px; font-weight: bold; color: var(--button-brown); text-align: right; padding-right: 15px; }
 .grimm-english-cell { width: calc((100% - 140px) / 2); }
 .grimm-german-cell  { width: calc((100% - 140px) / 2); font-style: italic; color: #555; }
-.grimm-atu-cell     { width: 60px; font-weight: bold; color: var(--button-brown); text-align: lef
+.grimm-atu-cell     { width: 60px; font-weight: bold; color: var(--button-brown); text-align: left; }
